--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.28.1"
+    "react-hook-form": "^7.54.2",
+    "react-router-dom": "^6.28.1",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
