--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.28.1",
     "styled-components": "^6.1.14"
   },
